team_csc: rebase on jdbc in progress..